unpackaged/main/default/objects/bt_stripe__Payment_Intent__c/fields/bt_stripe__Capture_Method__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Capture_Method__c</fullName>
    <label>Capture Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>automatic</fullName>
                <label>Automatic</label>
            </value>
            <value>
                <fullName>manual</fullName>
                <label>Manual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>