unpackaged/main/default/objects/bt_stripe__Payment_Intent__c/fields/bt_stripe__Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Client_Secret__c</fullName>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>