unpackaged/main/default/objects/bt_stripe__Payment_Intent__c/fields/bt_stripe__Currency__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>CNY</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>