unpackaged/main/default/objects/bt_stripe__Payment_Intent__c/fields/bt_stripe__Payment_Intent_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payment_Intent_Id__c</fullName>
    <label>Payment Intent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>