unpackaged/main/default/objects/bt_stripe__Payment_Intent__c/fields/bt_stripe__Status__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>requires_payment_method</fullName>
                <label>Requires Payment Method</label>
            </value>
            <value>
                <fullName>requires_source</fullName>
                <label>Requires Source</label>
            </value>
            <value>
                <fullName>requires_confirmation</fullName>
                <label>Requires Confirmation</label>
            </value>
            <value>
                <fullName>requires_action</fullName>
                <label>Requires Action</label>
            </value>
            <value>
                <fullName>processing</fullName>
                <label>Processing</label>
            </value>
            <value>
                <fullName>requires_capture</fullName>
                <label>Requires Capture</label>
            </value>
            <value>
                <fullName>canceled</fullName>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>succeeded</fullName>
                <label>Succeeded</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>